修改目录文件

--- a/app/themes/basic.scss
+++ b/app/themes/basic.scss
@@ -1,7 +1,7 @@
 /*
  * @Author: wosqqa
  * @Date: 2022-07-20 13:21:44
- * @LastEditors: wosqqa nmdwosqqa@163.com
+ * @LastEditors: wosqqa
  * @LastEditTime: 2022-08-15 22:13:14
  * @Description: maco 布局
  */
