--- a/app/themes/dark.scss
+++ b/app/themes/dark.scss
@@ -1,7 +1,7 @@
 /*
  * @Author: wosqqa
  * @Date: 2022-07-20 11:34:27
- * @LastEditors: wosqqa nmdwosqqa@163.com
+ * @LastEditors: wosqqa
  * @LastEditTime: 2022-08-12 21:04:29
  * @Description: maco 黑夜主题
  */
