--- a/app/themes/light.scss
+++ b/app/themes/light.scss
@@ -1,7 +1,7 @@
 /*
  * @Author: wosqqa
  * @Date: 2022-07-20 12:52:31
- * @LastEditors: wosqqa nmdwosqqa@163.com
+ * @LastEditors: wosqqa
  * @LastEditTime: 2022-08-12 21:01:49
  * @Description: nacto 明亮主题
  */
